// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: bar seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "runner": [Function],
          "subtype": "event",
        },
        "type": 12,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "store": Array [
                    3,
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    "foo | 1 | 11",
                  ],
                },
                "type": 15,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Array [
                    Object {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "type": 11,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "store": Array [
                            4,
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            12,
                          ],
                        },
                        "type": 15,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Array [],
                      "group": "step",
                      "type": "multi",
                    },
                  ],
                  "group": "step",
                  "type": "seq",
                },
              ],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
        Object {
          "data": Object {
            "data": Object {
              "runner": [Function],
            },
            "type": 13,
          },
          "group": "step",
          "type": "single",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: bar seq 2`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "runner": [Function],
          "subtype": "event",
        },
        "type": 12,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "store": Array [
                    3,
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    "foo | 1 | 11",
                  ],
                },
                "type": 15,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Array [
                    Object {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "type": 11,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "store": Array [
                            4,
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            12,
                          ],
                        },
                        "type": 15,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Array [],
                      "group": "step",
                      "type": "multi",
                    },
                  ],
                  "group": "step",
                  "type": "seq",
                },
              ],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: foo seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo",
          "runner": [Function],
          "subtype": "event",
        },
        "type": 12,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "fullName": "foo → *",
                  "runner": [Function],
                  "subtype": "event",
                },
                "type": 12,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Array [
                    Object {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "type": 11,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "store": Array [
                            3,
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            "foo | 1 | 11",
                          ],
                        },
                        "type": 15,
                      },
                      "group": "step",
                      "type": "single",
                    },
                    Object {
                      "data": Array [
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "reduce": [Function],
                                },
                                "type": 11,
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "type": 14,
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "type": 14,
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Array [
                                    4,
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    12,
                                  ],
                                },
                                "type": 15,
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "type": "multi",
                    },
                  ],
                  "group": "step",
                  "type": "seq",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "runner": [Function],
                    },
                    "type": 13,
                  },
                  "group": "step",
                  "type": "single",
                },
              ],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: show bar 1`] = `
"Seq [
  1. Single {
     \\"type\\": 12,
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo → *\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": 11,
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": 15,
           \\"data\\": {
             \\"store\\": [
               3,
               null,
               null,
               null,
               null,
               \\"foo | 1 | 11\\"
             ]
           }
        },
        5. Multi [
           *  Seq [
              1. Single {
                 \\"type\\": 11,
                 \\"data\\": {}
              },
              2. Single {
                 \\"type\\": 14,
                 \\"data\\": {}
              },
              3. Single {
                 \\"type\\": 14,
                 \\"data\\": {}
              },
              4. Single {
                 \\"type\\": 15,
                 \\"data\\": {
                   \\"store\\": [
                     4,
                     null,
                     null,
                     null,
                     null,
                     12
                   ]
                 }
              },
              5. Multi []
           ]
        ]
     ],
     *  Single {
        \\"type\\": 13,
        \\"data\\": {}
     }
  ]
]"
`;

exports[`graphite: show bar 2`] = `
"Seq [
  1. Single {
     \\"type\\": 12,
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo → *\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": 11,
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": 15,
           \\"data\\": {
             \\"store\\": [
               3,
               null,
               null,
               null,
               null,
               \\"foo | 1 | 11\\"
             ]
           }
        },
        5. Multi [
           *  Seq [
              1. Single {
                 \\"type\\": 11,
                 \\"data\\": {}
              },
              2. Single {
                 \\"type\\": 14,
                 \\"data\\": {}
              },
              3. Single {
                 \\"type\\": 14,
                 \\"data\\": {}
              },
              4. Single {
                 \\"type\\": 15,
                 \\"data\\": {
                   \\"store\\": [
                     4,
                     null,
                     null,
                     null,
                     null,
                     12
                   ]
                 }
              },
              5. Multi []
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show foo 1`] = `
"Seq [
  1. Single {
     \\"type\\": 12,
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": 11,
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": 12,
           \\"data\\": {
             \\"subtype\\": \\"event\\",
             \\"fullName\\": \\"foo → *\\"
           }
        },
        3. Multi [
           *  Seq [
              1. Single {
                 \\"type\\": 11,
                 \\"data\\": {}
              },
              2. Single {
                 \\"type\\": 14,
                 \\"data\\": {}
              },
              3. Single {
                 \\"type\\": 14,
                 \\"data\\": {}
              },
              4. Single {
                 \\"type\\": 15,
                 \\"data\\": {
                   \\"store\\": [
                     3,
                     null,
                     null,
                     null,
                     null,
                     \\"foo | 1 | 11 | 101\\"
                   ]
                 }
              },
              5. Multi [
                 *  Seq [
                    1. Single {
                       \\"type\\": 11,
                       \\"data\\": {}
                    },
                    2. Single {
                       \\"type\\": 14,
                       \\"data\\": {}
                    },
                    3. Single {
                       \\"type\\": 14,
                       \\"data\\": {}
                    },
                    4. Single {
                       \\"type\\": 15,
                       \\"data\\": {
                         \\"store\\": [
                           4,
                           null,
                           null,
                           null,
                           null,
                           18
                         ]
                       }
                    },
                    5. Multi []
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store1 1`] = `
"Seq [
  1. Single {
     \\"type\\": 14,
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": 15,
     \\"data\\": {
       \\"store\\": [
         3,
         null,
         null,
         null,
         null,
         \\"foo | 1 | 11 | 101\\"
       ]
     }
  },
  3. Multi [
     *  Seq [
        1. Single {
           \\"type\\": 11,
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": 15,
           \\"data\\": {
             \\"store\\": [
               4,
               null,
               null,
               null,
               null,
               18
             ]
           }
        },
        5. Multi []
     ]
  ]
]"
`;

exports[`graphite: show store2 1`] = `
"Seq [
  1. Single {
     \\"type\\": 14,
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": 15,
     \\"data\\": {
       \\"store\\": [
         4,
         null,
         null,
         null,
         null,
         18
       ]
     }
  },
  3. Multi []
]"
`;

exports[`graphite: store1 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "type": 14,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Array [
            3,
            [Function],
            [Function],
            [Function],
            [Function],
            "foo | 1 | 11 | 101",
          ],
        },
        "type": 15,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "store": Array [
                    4,
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    18,
                  ],
                },
                "type": 15,
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [],
              "group": "step",
              "type": "multi",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: store2 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "type": 14,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Array [
            4,
            [Function],
            [Function],
            [Function],
            [Function],
            18,
          ],
        },
        "type": 15,
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`showcase: event foo 1`] = `
"Seq [
  1. Single {
     \\"type\\": 12,
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"foo\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": 11,
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        4. Single {
           \\"type\\": 15,
           \\"data\\": {
             \\"store\\": [
               5,
               null,
               null,
               null,
               null,
               3
             ]
           }
        },
        5. Multi [
           *  Single {
              \\"type\\": 13,
              \\"data\\": {}
           }
        ]
     ]
  ]
]"
`;

exports[`showcase: mapped 1`] = `
"Seq [
  1. Single {
     \\"type\\": 14,
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": 15,
     \\"data\\": {
       \\"store\\": [
         8,
         null,
         null,
         null,
         null,
         3
       ]
     }
  },
  3. Multi [
     *  Single {
        \\"type\\": 13,
        \\"data\\": {}
     }
  ]
]"
`;

exports[`showcase: store a 1`] = `
"Seq [
  1. Single {
     \\"type\\": 14,
     \\"data\\": {}
  },
  2. Single {
     \\"type\\": 15,
     \\"data\\": {
       \\"store\\": [
         5,
         null,
         null,
         null,
         null,
         3
       ]
     }
  },
  3. Multi [
     *  Single {
        \\"type\\": 13,
        \\"data\\": {}
     }
  ]
]"
`;
